--- a/style.css
+++ b/style.css
@@ -120,14 +120,14 @@ header .fa-bars {
   transition: 0.2s;
 }
 /* logo de presentacion e imagen*/
-.home {
- /* min-height: 55vh;
- /* background-size: cover;
+.home {/*
+  min-height: 55vh;
+  background-size: cover;
   background-position: center;
- /* background-attachment: fixed;
+ background-attachment: fixed;
   z-index: 0;
- overflow: hidden;*/
-  position: relative;
+ overflow: hidden;
+  position: relative;*/
 }
 /* formato de la imagen del carousel */
 
@@ -156,16 +156,14 @@ header .fa-bars {
   opacity: 1;
   transform: scale(1); /* Escala normal */
 }
-
-
-
-/*.home .content {
- /* display: flex;
+                       
+.home .content {
+  display: flex;
   align-items: right;
   justify-content: right;
   flex-flow: column;
-  padding-top: 40rem;
-}*/
+  padding-top: 4rem;
+}
 .home h1 {
   text-align: right;
 }
@@ -194,6 +192,24 @@ header .fa-bars {
   width: 100%;
   height: 100%;
 }
+/* boton subir */
+#myBtn {
+  display: none; /* Ocultar el botón de volver arriba */
+  position: fixed; /* Fijar el botón en la esquina inferior derecha */
+  bottom: 20px;
+  right: 30px;
+  z-index: 99; /* Asegurarse de que el botón esté por encima de otros elementos */
+  border: none; /* Quitar el borde del botón */
+  outline: none; /* Quitar el contorno del botón */
+  background-color: #007bffbb; /* Color de fondo del botón */
+  color: white; /* Color del texto del botón */
+  cursor: pointer; /* Cambiar el cursor al pasar sobre el botón */
+  padding: 15px; /* Espacio alrededor del texto del botón */
+  border-radius: 15px; /* Redondear las esquinas del botón */
+  margin-left: 10px; /* Ajusta el espaciado entre el texto y el icono */
+ 
+}
+
 @media screen and (max-width: 768px) {
    .home .content h1 {
       font-size: 3em; /* Reducir el tamaño de la fuente para pantallas pequeñas */
